# sample-cpp-tdd

./: CMakeLists.txt  main.cpp
cmake/: gtest.cmake
src/: Sample.cpp  Sample.h
test/: CMakeLists.txt  SampleTest.cpp
